<resources>
    <string name="app_name">AnnSearch</string>
    <string name="title_activity_maps">Map</string>
    <string name="BtnMapAccessString">acceder à la map</string>
    <string name="BtnAddAccessString">Ajouter à la bdd</string>
    <string name="AddButtonString">Ajouter à la base de donnée</string>
    <string name="HintIndice2String">ex : Batiment</string>
    <string name="HintIndice1String">ex : rouge</string>
    <string name="LabelIndice2String">Indice 2</string>
    <string name="LabelIndice1String">Indice 1</string>
    <string name="HintIndice3String">ex : Mexicain</string>
    <string name="LabelIndice3String">Indice 3</string>
    <string name="title_activity_example">ExampleActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
